--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,14 @@
                     <textarea id="message" name="message" rows="5" cols="30" placeholder="Write message here..."></textarea>
                     </li>
                     </ul>
-                <input type="submit" value="Send" class="cta">
+                    <div class="message-flex">
+                    <input type="checkbox" id="send-message">
+                    <label for="send-message" class="cta">Send</label>
+                <div class="message-sent">
+                     <p>Message sent!</p>
+                    <p>We will get back to you as soon as we can.</p>
+                </div>
+                </div>
                 </form>
             </div>
         </section>
