--- a/checkout.html
+++ b/checkout.html
@@ -176,7 +176,7 @@
                     </li>
                     </div>
                 </ul>
-                <a href="checkout-success.html"><button class="cta">Pay</button>
+                <a href="checkout-success.html" class="cta">Pay
                 </a>
             </form>
             
