--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       <label for="hamburger-menu" class="close"><img src="images/header&footer/close.png" alt="close"></label>
       <ul class="nav-text">
         <li><a href="men.html">Men</a></li>
-        <li><a href="men.html">Women</a></li>
-        <li><a href="men.html">Unisex</a></li>
+        <li><a href="women.html">Women</a></li>
+        <li><a href="unisex.html">Unisex</a></li>
         <li><a href="about.html">About</a></li>
     </ul>
     
@@ -78,7 +78,7 @@
         <section class="product-section"> 
           <div class="product-card">
               <div class="product-image">
-                  <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
+                  <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
               </div>
               <div class="product-info">
                   <div class="product-name">
@@ -96,7 +96,7 @@
           </div>
           <div class="product-card">
               <div class="product-image">
-                  <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
+                  <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
               </div>
               <div class="product-info">
                   <div class="product-name">
@@ -110,7 +110,7 @@
           </div>
           <div class="product-card">
               <div class="product-image">
-                  <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
+                  <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
               </div>
               <div class="product-info">
                   <div class="product-name">
@@ -124,7 +124,7 @@
           </div>
           <div class="product-card">
               <div class="product-image">
-                  <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
+                  <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
               </div>
               <div class="product-info">
                   <div class="product-name">
