--- a/men.html
+++ b/men.html
@@ -103,7 +103,7 @@
         <section class="product-section"> 
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
@@ -121,7 +121,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
@@ -135,7 +135,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
@@ -149,7 +149,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
@@ -163,7 +163,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
@@ -177,7 +177,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
@@ -191,7 +191,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
@@ -205,7 +205,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="jacket-specific.html"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
