--- a/unisex.html
+++ b/unisex.html
@@ -19,7 +19,7 @@
       </a>
       <nav class="flexbox">
         <ul id="icons">
-          <li><a href="/">
+          <li><a href="checkout.html">
             <figure>
             <img src="images/header&footer/shopping-bag.png" alt="shopping basket">
             <figcaption>Basket</figcaption>
@@ -97,25 +97,17 @@
                         <label for="green">Green</label></li>
                     </ul>
                     </div>
-            </div>
-            <!-- <div class="sort">
-            <label>Sort by:</label>
-            <select>
-                <option value="/">Featured</option>
-                <option value="/">Lowest price</option>
-                <option value="/">Highest price</option>
-            </select>
-        </div> -->
+                </div>
     
        
         <section class="product-section"> 
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="/"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
-                        <a href="/"><h3>Coastal Rain 02</h3>
+                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                         <h4>All-weather jacket</h4> 
                         </a>
                         <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
@@ -129,11 +121,11 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="/"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
-                        <a href="/"><h3>Coastal Rain 02</h3>
+                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                         <h4>All-weather jacket</h4> 
                         </a>
                         <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
@@ -143,11 +135,11 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="/"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
-                        <a href="/"><h3>Coastal Rain 02</h3>
+                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                         <h4>All-weather jacket</h4> 
                         </a>
                         <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
@@ -157,11 +149,11 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="/"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
-                        <a href="/"><h3>Coastal Rain 02</h3>
+                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                         <h4>All-weather jacket</h4> 
                         </a>
                         <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
@@ -171,11 +163,11 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="/"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
-                        <a href="/"><h3>Coastal Rain 02</h3>
+                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                         <h4>All-weather jacket</h4> 
                         </a>
                         <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
@@ -185,11 +177,11 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="/"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
-                        <a href="/"><h3>Coastal Rain 02</h3>
+                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                         <h4>All-weather jacket</h4> 
                         </a>
                         <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
@@ -199,11 +191,11 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="/"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
-                        <a href="/"><h3>Coastal Rain 02</h3>
+                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                         <h4>All-weather jacket</h4> 
                         </a>
                         <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
@@ -213,11 +205,11 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <a href="/"><img src="/images/products/red.jpg"></a>
+                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
                     </div>
                     <div class="product-info">
                         <div class="product-name">
-                        <a href="/"><h3>Coastal Rain 02</h3>
+                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
                         <h4>All-weather jacket</h4> 
                         </a>
                         <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
