--- a/checkout.html
+++ b/checkout.html
@@ -19,7 +19,7 @@
       </a>
       <nav class="flexbox">
         <ul id="icons">
-          <li><a href="/">
+          <li><a href="checkout.html">
             <figure>
             <img src="images/header&footer/shopping-bag.png" alt="shopping basket">
             <figcaption>Basket</figcaption>
