--- a/about.html
+++ b/about.html
@@ -30,7 +30,19 @@
         <img src="images/header&footer/logo.png" alt="rainydays logo" class="logo">
       </a>
       <nav class="flexbox">
-        <ul id="icons">
+        <ul class="menu">
+          <li><a class="menu-item" href="men.html">Men</a></li>
+          <li><a class="menu-item" href="women.html">Women</a></li>
+          <li><a class="menu-item" href="contact.html">Contact</a></li>
+          <li><a class="menu-item" href="about.html">About</a></li>
+      </ul>
+        <ul class="nav-text">
+          <li><a class="menu-item" href="men.html">Men</a></li>
+          <li><a class="menu-item" href="women.html">Women</a></li>
+          <li><a class="menu-item" href="contact.html">Contact</a></li>
+          <li><a class="menu-item" href="about.html">About</a></li>
+      </ul>
+      <ul id="icons">
           <li><a href="checkout.html">
             <figure>
             <img src="images/header&footer/shopping-bag.png" alt="shopping basket">
@@ -50,23 +62,13 @@
             </figure>
           </a></li>
         </ul>
-        <input type="checkbox" id="hamburger-menu">
-      <label for="hamburger-menu" class="hamburger"><img src="images/header&footer/menu.png" alt="hamburger menu"></label>
-      <label for="hamburger-menu" class="close"><img src="images/header&footer/close.png" alt="close"></label>
-        <ul class="nav-text">
-          <li><a href="men.html">Men</a></li>
-          <li><a href="women.html">Women</a></li>
-          <li><a href="unisex.html">Unisex</a></li>
-          <li class="active"><a href="about.html">About</a></li>
-        </ul>
+        <button class="hamburger-btn">
+          <img class="hamburger" src="images/header&footer/menu.png" alt="hamburger menu">
+          <img class="close" src="images/header&footer/close.png" alt="close"
+        </button>
       </nav>
       </header>   
     <main>
-        <section class="search-container"><form class="search">
-            <input type="text" placeholder="Search"/>
-            <button type="submit"><img src="images/header&footer/search-grey.png" alt="search"></button>
-          </form>
-        </section>
           
         <section class="page-heading">
           <div class="breadcrumbs">
@@ -133,5 +135,6 @@
           <a href="/"><img src="images/header&footer/instagram.png" alt="instagram logo"></a>
         </section>
       </footer>
+      <script src="js/hamburger.js"></script>
 </body>
 </html>
