--- a/checkout.html
+++ b/checkout.html
@@ -40,7 +40,19 @@
         <img src="images/header&footer/logo.png" alt="rainydays logo" class="logo">
       </a>
       <nav class="flexbox">
-        <ul id="icons">
+        <ul class="menu">
+          <li><a class="menu-item" href="men.html">Men</a></li>
+          <li><a class="menu-item" href="women.html">Women</a></li>
+          <li><a class="menu-item" href="contact.html">Contact</a></li>
+          <li><a class="menu-item" href="about.html">About</a></li>
+      </ul>
+        <ul class="nav-text">
+          <li><a class="menu-item" href="men.html">Men</a></li>
+          <li><a class="menu-item" href="women.html">Women</a></li>
+          <li><a class="menu-item" href="contact.html">Contact</a></li>
+          <li><a class="menu-item" href="about.html">About</a></li>
+      </ul>
+      <ul id="icons">
           <li><a href="checkout.html">
             <figure>
             <img src="images/header&footer/shopping-bag.png" alt="shopping basket">
@@ -60,15 +72,10 @@
             </figure>
           </a></li>
         </ul>
-        <input type="checkbox" id="hamburger-menu">
-      <label for="hamburger-menu" class="hamburger"><img src="images/header&footer/menu.png" alt="hamburger menu"></label>
-      <label for="hamburger-menu" class="close"><img src="images/header&footer/close.png" alt="close"></label>
-        <ul class="nav-text">
-          <li><a href="men.html">Men</a></li>
-          <li><a href="women.html">Women</a></li>
-          <li><a href="unisex.html">Unisex</a></li>
-          <li><a href="about.html">About</a></li>
-        </ul>
+        <button class="hamburger-btn">
+          <img class="hamburger" src="images/header&footer/menu.png" alt="hamburger menu">
+          <img class="close" src="images/header&footer/close.png" alt="close"
+        </button>
       </nav>
       </header>   
     <main>
@@ -143,33 +150,40 @@
                         <li>
                         <label for="firstname">First name</label>
                         <input type="text" name="firstname" id="firstname" required>
+                        <div id="firstNameError" class="form-error">First name must be at least 1 character</div>
                         </li>
                         <li>
                         <label for="lastname">Last name</label>
                         <input type="text" name="lastname" id="lastname" required>
+                        <div id="lastNameError" class="form-error">Last name must be at least 1 character</div>
                         </li>
                         </div>
                         <li>
                         <label for="address">Address</label>
                         <input type="text" name="address" id="address" required>
+                        <div id="addressError" class="form-error">Address must be at least 3 characters</div>
                         </li>
                         <div class="postal-town">
                         <li>
                         <label for="postalcode">Postal code</label>
                         <input type="text" name="postalcode" id="postalcode" required>
+                        <div id="postalCodeError" class="form-error">Postal code must be 4 characters</div>
                         </li>
                         <li>
                         <label for="Town">Town</label>
                         <input type="text" name="town" id="town" required>
+                        <div id="townError" class="form-error">Town must be at least 1 character</div>
                         </li>
                         </div>
                         <li>
                         <label for="emailaddress">Email address</label>
                         <input type="email" name="emailaddress" id="emailaddress" required>
+                        <div id="emailError" class="form-error">Email must be in this format (example)</div>
                         </li>
                         <li>
                         <label for="phonenumber">Phone number</label>
                         <input type="tel" name="phonenumber" id="phonenumber" required>
+                        <div id="phoneNumberError" class="form-error">Phone number must be 9 numbers</div>
                         </li>
                         </ul>
                     </form>
@@ -182,19 +196,23 @@
                     <li>
                     <label for="cardholder">Cardholder name</label>
                     <input type="text" name="cardholder" id="cardholder" required>
+                    <div id="cardHolderError" class="form-error">Cardholder name must be at least 1 character</div>
                     </li>
                     <li>
                     <label for="cardnumber">Card number</label>
                     <input type="text" name="cardnumber" id="cardnumber" required>
+                    <div id="cardNumberError" class="form-error">Card number must be 12 numbers</div>
                     </li>
                     <div class="expiration-ccv">
                     <li>
                     <label for="expirationdate">Expiration date</label>
-                    <input type="date" name="expirationdate" id="expirationdate" required>
+                    <input type="text" name="expirationdate" id="expirationdate" required>
+                    <div id="expirationError" class="form-error">Expiration date must be in the format MM/YY</div>
                     </li>
                     <li>
                     <label for="ccv">CCV-code</label>
                     <input type="text" name="ccv" id="ccv" required>
+                    <div id="ccvError" class="form-error">CCV must be 3 numbers</div>
                     </li>
                     </div>
                 </ul>
@@ -223,5 +241,7 @@
             <a href="/"><img src="images/header&footer/instagram.png" alt="instagram logo"></a>
         </section>
     </footer>
+    <script src="js/hamburger.js"></script>
+    <script src="js/checkout.js"></script>
 </body>
 </html>
