--- a/index.html
+++ b/index.html
@@ -31,7 +31,19 @@
       <img src="images/header&footer/logo.png" alt="rainydays logo" class="logo">
     </a>
     <nav class="flexbox">
-      <ul id="icons">
+      <ul class="menu">
+        <li><a class="menu-item" href="men.html">Men</a></li>
+        <li><a class="menu-item" href="women.html">Women</a></li>
+        <li><a class="menu-item" href="contact.html">Contact</a></li>
+        <li><a class="menu-item" href="about.html">About</a></li>
+    </ul>
+      <ul class="nav-text">
+        <li><a class="menu-item" href="men.html">Men</a></li>
+        <li><a class="menu-item" href="women.html">Women</a></li>
+        <li><a class="menu-item" href="contact.html">Contact</a></li>
+        <li><a class="menu-item" href="about.html">About</a></li>
+    </ul>
+    <ul id="icons">
         <li><a href="checkout.html">
           <figure>
           <img src="images/header&footer/shopping-bag.png" alt="shopping basket">
@@ -51,16 +63,10 @@
           </figure>
         </a></li>
       </ul>
-      <input type="checkbox" id="hamburger-menu">
-      <label for="hamburger-menu" class="hamburger"><img src="images/header&footer/menu.png" alt="hamburger menu"></label>
-      <label for="hamburger-menu" class="close"><img src="images/header&footer/close.png" alt="close"></label>
-      <ul class="nav-text">
-        <li><a href="men.html">Men</a></li>
-        <li><a href="women.html">Women</a></li>
-        <li><a href="unisex.html">Unisex</a></li>
-        <li><a href="about.html">About</a></li>
-    </ul>
-    
+      <button class="hamburger-btn">
+        <img class="hamburger" src="images/header&footer/menu.png" alt="hamburger menu">
+        <img class="close" src="images/header&footer/close.png" alt="close"
+      </button>
     </nav>
     </header>
     <main>
@@ -71,10 +77,10 @@
     </section>
       <section class="container-shopnav">
         <div class="item-shop-men wrapper">
-          <a class="cta bottom" href="men.html">Shop Men</a>
+          <a class="cta bottom" href="men.html">Men</a>
         </div>
         <div class="item-shop-men item-shop-women wrapper">
-          <a class="cta bottom" href="women.html">Shop Women</a>
+          <a class="cta bottom" href="women.html">Women</a>
         </div>
       </section>
       <section class="waterproof">
@@ -176,6 +182,8 @@
         <a href="/"><img src="images/header&footer/instagram.png" alt="instagram logo"></a>
       </section>
     </footer>
-  </body>
+  <script src="js/hamburger.js"></script>
+</body>
+  
 </html>
  
