--- a/jacket-specific.html
+++ b/jacket-specific.html
@@ -29,8 +29,21 @@
         <img src="images/header&footer/logo.png" alt="rainydays logo" class="logo">
       </a>
       <nav class="flexbox">
-        <ul id="icons">
+        <ul class="menu">
+          <li><a class="menu-item" href="men.html">Men</a></li>
+          <li><a class="menu-item" href="women.html">Women</a></li>
+          <li><a class="menu-item" href="contact.html">Contact</a></li>
+          <li><a class="menu-item" href="about.html">About</a></li>
+      </ul>
+        <ul class="nav-text">
+          <li><a class="menu-item" href="men.html">Men</a></li>
+          <li><a class="menu-item" href="women.html">Women</a></li>
+          <li><a class="menu-item" href="contact.html">Contact</a></li>
+          <li><a class="menu-item" href="about.html">About</a></li>
+      </ul>
+      <ul id="icons">
           <li><a href="checkout.html">
+            <div class="cart-count"><span class="counter">0</span></div>
             <figure>
             <img src="images/header&footer/shopping-bag.png" alt="shopping basket">
             <figcaption>Basket</figcaption>
@@ -49,15 +62,10 @@
             </figure>
           </a></li>
         </ul>
-        <input type="checkbox" id="hamburger-menu">
-      <label for="hamburger-menu" class="hamburger"><img src="images/header&footer/menu.png" alt="hamburger menu"></label>
-      <label for="hamburger-menu" class="close"><img src="images/header&footer/close.png" alt="close"></label>
-        <ul class="nav-text">
-          <li><a href="men.html">Men</a></li>
-          <li><a href="women.html">Women</a></li>
-          <li><a href="unisex.html">Unisex</a></li>
-          <li><a href="about.html">About</a></li>
-        </ul>
+        <button class="hamburger-btn">
+          <img class="hamburger" src="images/header&footer/menu.png" alt="hamburger menu">
+          <img class="close" src="images/header&footer/close.png" alt="close"
+        </button>
       </nav>
       </header>  
     <main>
@@ -174,8 +182,7 @@
                 </div>
             </div>
             <div class="add-to-cart">
-                <input type="checkbox" id="add-to-cart">
-                <label for="add-to-cart" class="cta cta-add-to-cart"></label>
+                <button class="cta cta-add-to-cart added-to-cart">Add to cart</button>
                 <div class="container-to-cart">
                 </div>
             </div>
@@ -215,5 +222,7 @@
           <a href="/"><img src="images/header&footer/instagram.png" alt="instagram logo"></a>
         </section>
       </footer>
+      <script src="js/addtocart.js"></script>
+      <script src="js/hamburger.js"></script>
 </body>
 </html>
