started to adjust shopping cart / add to cart function

--- a/jacket-specific.html
+++ b/jacket-specific.html
@@ -42,7 +42,7 @@
           <li><a class="menu-item" href="about.html">About</a></li>
       </ul>
       <ul id="icons">
-          <li><a href="checkout.html">
+          <li><a class="cart-figure" href="checkout.html">
             <div class="cart-count"><span class="counter">0</span></div>
             <figure>
             <img src="images/header&footer/shopping-bag.png" alt="shopping basket">
