--- a/jacket-specific.html
+++ b/jacket-specific.html
@@ -43,7 +43,7 @@
       </ul>
       <ul id="icons">
           <li><a class="cart-figure" href="checkout.html">
-            <div class="cart-count"><span class="counter">0</span></div>
+            <div class="cart-count"><div class="counter">0</div></div>
             <figure>
             <img src="images/header&footer/shopping-bag.png" alt="shopping basket">
             <figcaption>Basket</figcaption>
@@ -222,7 +222,8 @@
           <a href="/"><img src="images/header&footer/instagram.png" alt="instagram logo"></a>
         </section>
       </footer>
-      <script src="js/addtocart.js"></script>
+  
+      <script src="js/addtocart.js" type="module"></script>
       <script src="js/hamburger.js"></script>
 </body>
 </html>
