--- a/checkout.html
+++ b/checkout.html
@@ -156,7 +156,7 @@
                         <li>
                         <label for="postalcode">Postal code</label>
                         <input type="text" name="postalcode" id="postalcode">
-                        <div id="postalCodeError" class="form-error short-error">Postal code must be 4 characters</div>
+                        <div id="postalCodeError" class="form-error short-error">Postal code must be 4 numbers</div>
                         </li>
                         <li>
                         <label for="Town">Town</label>
@@ -172,7 +172,7 @@
                         <li>
                         <label for="phonenumber">Phone number</label>
                         <input type="tel" name="phonenumber" id="phonenumber">
-                        <div id="phoneNumberError" class="form-error">Phone number must be 9 numbers</div>
+                        <div id="phoneNumberError" class="form-error">Phone number must be 8 numbers</div>
                         </li>
                         </ul>
                 </div>
@@ -188,7 +188,7 @@
                     <li>
                     <label for="cardnumber">Card number</label>
                     <input type="text" name="cardnumber" id="cardnumber">
-                    <div id="cardNumberError" class="form-error">Card number must be 12 numbers</div>
+                    <div id="cardNumberError" class="form-error">Card number must be 16 numbers</div>
                     </li>
                     <div class="expiration-ccv">
                     <li>
