--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!--All icons are from Carbon pack in the Auto Icon plugin in XD License: Apache 2.0-->
   <head>
     <meta charset="utf-8">
-    <title>Rainydays website</title>
+    <title>Home - Rainydays</title>
     <meta name="description" content="The home page for Rainydays">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Fonts-->
