--- a/jacket-specific.html
+++ b/jacket-specific.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Rainydays website - jacket specific page</title>
+    <title>Coastal Rain 02 - Rainydays</title>
     <meta name="description" content="The jacket specific page for Rainydays">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Fonts-->
