--- a/men.html
+++ b/men.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Rainydays website - jacket list </title>
+    <title>Men jackets - Rainydays </title>
     <meta name="description" content="The jacket list (men) for Rainydays">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Fonts-->
