--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Rainydays website - about page</title>
+    <title>About - Rainydays</title>
     <meta name="description" content="The about page for Rainydays">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Fonts-->
