--- a/checkout-success.html
+++ b/checkout-success.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Rainydays website - checkout success page</title>
+    <title>Checkout success - Rainydays</title>
     <meta name="description" content="The checkout success page for Rainydays">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Fonts-->
