--- a/checkout.html
+++ b/checkout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Rainydays website - checkout page</title>
+    <title>Basket - Rainydays</title>
     <meta name="description" content="The checkout page for Rainydays">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Fonts-->
