--- a/men.html
+++ b/men.html
@@ -262,6 +262,7 @@
     <script src="js/hamburger.js"></script>
     <script src="js/components/count-in-basket.js" type="module"></script>
     <script src="js/components/subscribe-form.js" type="module"></script>
+    <script src="js/products/products-api.js" type="module"></script>
 
 </body>
 </html>
