added html through js

--- a/men.html
+++ b/men.html
@@ -109,7 +109,7 @@
     
        
         <section class="product-section"> 
-                <div class="product-card">
+                <!-- <div class="product-card">
                     <div class="product-image">
                         <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
                     </div>
@@ -224,7 +224,7 @@
                         </div>
                         <p>1 999 NOK</p>
                     </div>
-                </div>
+                </div> -->
         </section>
     </section>
 
