fetched api on jacket specific page

--- a/jacket-specific.html
+++ b/jacket-specific.html
@@ -73,7 +73,7 @@
           </div>
           </section>
           <section class="container-jacket-specific">
-          <div class="slideshow">
+          <!-- <div class="slideshow">
               <div class="slide-wrapper">
                  <ol class="slideshow-view">
                      <li id="slide1" class="slideshow-slide">
@@ -190,7 +190,7 @@
                 <input type="checkbox" id="size-guide">
                 <label for="size-guide" id="h2-size"><h2>Size guide and fitting</h2></label>
                 <p id="size-info">Here is a table of measurements for the different sizes.</p>
-              </div>
+              </div> -->
           </section>
     </main>
     <footer>
@@ -214,5 +214,6 @@
   
       <script src="js/addtocart.js" type="module"></script>
       <script src="js/hamburger.js"></script>
+      <script src="js/products/jacket-specific.js" type="module"></script>
 </body>
 </html>
