--- a/jacket-specific.html
+++ b/jacket-specific.html
@@ -73,6 +73,7 @@
           </div>
           </section>
           <section class="container-jacket-specific">
+            <div class="loader"></div>
           <!-- <div class="slideshow">
               <div class="slide-wrapper">
                  <ol class="slideshow-view">
