--- a/men.html
+++ b/men.html
@@ -109,6 +109,8 @@
     
        
         <section class="product-section"> 
+            <div class="loader"></div>
+
                 <!-- <div class="product-card">
                     <div class="product-image">
                         <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
