begun to look at radio color inputs

--- a/jacket-specific.html
+++ b/jacket-specific.html
@@ -73,7 +73,8 @@
           </div>
           </section>
           <section class="container-jacket-specific">
-            <div class="loader"></div>
+<div class="infoContainer"><div class="loader"></div></div>
+            
           <!-- <div class="slideshow">
               <div class="slide-wrapper">
                  <ol class="slideshow-view">
@@ -192,7 +193,10 @@
                 <label for="size-guide" id="h2-size"><h2>Size guide and fitting</h2></label>
                 <p id="size-info">Here is a table of measurements for the different sizes.</p>
               </div> -->
-          </section>
+  <div class="colorContainer"></div>
+</section>
+
+
     </main>
     <footer>
         <div class="footer-links">
