added color and size attributes

--- a/jacket-specific.html
+++ b/jacket-specific.html
@@ -194,6 +194,14 @@
                 <p id="size-info">Here is a table of measurements for the different sizes.</p>
               </div> -->
   <div class="colorContainer"></div>
+  <div id="color-output"></div>
+  <div class="sizeContainer"></div>
+  <div id="size-output"></div>
+
+  <div class="add-to-cart">
+    <button class="cta cta-add-to-cart added-to-cart">Add to cart</button>
+    <div class="container-to-cart">
+    </div>
 </section>
 
 
