--- a/index.html
+++ b/index.html
@@ -82,68 +82,10 @@
       </section>
       <section class="bestsellers">
         <h2>Best Sellers</h2>
-        <section class="product-section"> 
-          <div class="product-card">
-              <div class="product-image">
-                  <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
-              </div>
-              <div class="product-info">
-                  <div class="product-name">
-                  <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
-                  <h4>All-weather jacket</h4> 
-                  </a>
-                  <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
-                  </div>
-                  <div class="product-name">
-                  <p>2 125 NOK</p>
-                  <span>2 500 NOK</span>
-                  </div>
-              </div>
-              <div class="sale">-15%</div>
-          </div>
-          <div class="product-card">
-              <div class="product-image">
-                  <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
-              </div>
-              <div class="product-info">
-                  <div class="product-name">
-                  <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
-                  <h4>All-weather jacket</h4> 
-                  </a>
-                  <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
-                  </div>
-                  <p>1 999 NOK</p>
-              </div>
-          </div>
-          <div class="product-card">
-              <div class="product-image">
-                  <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
-              </div>
-              <div class="product-info">
-                  <div class="product-name">
-                  <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
-                  <h4>All-weather jacket</h4> 
-                  </a>
-                  <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
-                  </div>
-                  <p>1 999 NOK</p>
-              </div>
-          </div>
-          <div class="product-card">
-              <div class="product-image">
-                  <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
-              </div>
-              <div class="product-info">
-                  <div class="product-name">
-                  <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
-                  <h4>All-weather jacket</h4> 
-                  </a>
-                  <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
-                  </div>
-                  <p>1 999 NOK</p>
-              </div>
-          </div>
-      </section>
+        <div class="product-section"> 
+          <div class="loader"></div>
+        </div>
+        </section>
       <section class="subscribe">
         <h2>Get updates</h2>
         <p>Sign up to our newsletter to receive updates straight to your inbox!</p>
@@ -176,6 +118,7 @@
     </footer>
   <script src="js/hamburger.js"></script>
   <script src="js/components/count-in-basket.js" type="module"></script>
+  <script src="js/products/featured.js" type="module"></script>
   <script src="js/components/subscribe-form.js" type="module"></script>
 
 </body>
