--- a/women.html
+++ b/women.html
@@ -108,124 +108,9 @@
                 </div>
     
        
-        <section class="product-section"> 
-                <div class="product-card">
-                    <div class="product-image">
-                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
-                    </div>
-                    <div class="product-info">
-                        <div class="product-name">
-                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
-                        <h4>All-weather jacket</h4> 
-                        </a>
-                        <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
-                        </div>
-                        <div class="product-name">
-                        <p>2 125 NOK</p>
-                        <span>2 500 NOK</span>
-                        </div>
-                    </div>
-                    <div class="sale">-15%</div>
-                </div>
-                <div class="product-card">
-                    <div class="product-image">
-                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
-                    </div>
-                    <div class="product-info">
-                        <div class="product-name">
-                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
-                        <h4>All-weather jacket</h4> 
-                        </a>
-                        <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
-                        </div>
-                        <p>1 999 NOK</p>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-image">
-                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
-                    </div>
-                    <div class="product-info">
-                        <div class="product-name">
-                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
-                        <h4>All-weather jacket</h4> 
-                        </a>
-                        <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
-                        </div>
-                        <p>1 999 NOK</p>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-image">
-                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
-                    </div>
-                    <div class="product-info">
-                        <div class="product-name">
-                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
-                        <h4>All-weather jacket</h4> 
-                        </a>
-                        <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
-                        </div>
-                        <p>1 999 NOK</p>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-image">
-                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
-                    </div>
-                    <div class="product-info">
-                        <div class="product-name">
-                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
-                        <h4>All-weather jacket</h4> 
-                        </a>
-                        <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
-                        </div>
-                        <p>1 999 NOK</p>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-image">
-                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
-                    </div>
-                    <div class="product-info">
-                        <div class="product-name">
-                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
-                        <h4>All-weather jacket</h4> 
-                        </a>
-                        <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
-                        </div>
-                        <p>1 999 NOK</p>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-image">
-                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
-                    </div>
-                    <div class="product-info">
-                        <div class="product-name">
-                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
-                        <h4>All-weather jacket</h4> 
-                        </a>
-                        <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
-                        </div>
-                        <p>1 999 NOK</p>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-image">
-                        <a href="jacket-specific.html"><img src="/images/products/red.jpg" alt="man with red jacket"></a>
-                    </div>
-                    <div class="product-info">
-                        <div class="product-name">
-                        <a href="jacket-specific.html"><h3>Coastal Rain 02</h3>
-                        <h4>All-weather jacket</h4> 
-                        </a>
-                        <img class="product-fav" src="images/favorite-dark.png" alt="favorite heart">
-                        </div>
-                        <p>1 999 NOK</p>
-                    </div>
-                </div>
-        </section>
+                <section class="product-section"> 
+                    <div class="loader"></div>
+                </section>
     </section>
 
         <section class="subscribe">
@@ -261,6 +146,7 @@
     </footer>
     <script src="js/hamburger.js"></script>
     <script src="js/components/count-in-basket.js" type="module"></script>
+    <script src="js/products/products-api.js" type="module"></script>
     <script src="js/components/subscribe-form.js" type="module"></script>
 </body>
 </html>
